crates/test-ui/ui/declare_class_invalid_receiver.stderr
error[E0277]: the trait bound `extern "C" fn(Box<CustomObject>, objc2::runtime::Sel): MethodImplementation` is not satisfied
 --> ui/declare_class_invalid_receiver.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | | ^
  | | |
  | |_the trait `MethodImplementation` is not implemented for `extern "C" fn(Box<CustomObject>, objc2::runtime::Sel)`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare.rs
  |
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
  = note: this error originates in the macro `$crate::__declare_class_register_out` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `extern "C" fn(Id<CustomObject, Shared>, objc2::runtime::Sel): MethodImplementation` is not satisfied
 --> ui/declare_class_invalid_receiver.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | | ^
  | | |
  | |_the trait `MethodImplementation` is not implemented for `extern "C" fn(Id<CustomObject, Shared>, objc2::runtime::Sel)`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare.rs
  |
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
  = note: this error originates in the macro `$crate::__declare_class_register_out` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `extern "C" fn(CustomObject, objc2::runtime::Sel): MethodImplementation` is not satisfied
 --> ui/declare_class_invalid_receiver.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | | ^
  | | |
  | |_the trait `MethodImplementation` is not implemented for `extern "C" fn(CustomObject, objc2::runtime::Sel)`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare.rs
  |
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
  = note: this error originates in the macro `$crate::__declare_class_register_out` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)
